--- a/style.css
+++ b/style.css
@@ -239,10 +239,9 @@ button:hover{
 }
 .pricingHeading1 h3{
     font-size: 2.5rem;
-    margin: 5px 0 0 14px;
+    margin: 5px 0 20px 14px;
     font-family: Gilroy-Bold, sans-serif;
     width: 100%;
-
 }
 .priceHeading p{
     font-family: Gilroy-Medium, sans-serif;
